Update for Eclipse 2022-12
=======================================================
NOTE: while waiting for a new release of Bundlor to be
available, this repo includes a manually built snapshot
of bundlor and p2 site in folder /bundlor.
This is to be removed and replaced with a reference to
the proper Bundlor p2 site
========================================================

- Bump version to 1.6.0
- Update to Eclipse 2022-12 and fix problems, correct target platform
  definition
- Update to Tycho 3.0.1 and review pom.xml
- Remove references to obsolete Springsource bundle repository
  and related download functionality
- Add o.e.v.i.framework.editor.core and o.e.v.i.framework.editor.ui
- Review o.e.v.i.management.remote and drop support for remote
  management of Virgo <= 3.0
- Fix several missing implementations in Bundlor-projects Manifest.mf
  editor